# dl_utils

./: .dockerignore  .gitignore  .hadolint.yaml  .markdownlint.yaml  .shellcheckrc  AGENTS.md  LICENSE  README.md  _optflow.py  alb_utils.py  boxmot_utils.py  check-infra.sh  check-non-py.sh  check-py.sh  check.sh  classes.py  copybal.py  cv_utils.py  cvat.py  cvat_srv.py  det.py  dinoal.py  gdinoal.py  ipy_utils.py  keras_utils.py  labels.py  labels_template.xlsx  ml_utils.py  ollm_utils.py  onnx_utils.py  pt_utils.py  pyproject.toml  repo2context.sh  repo_status.sh  rerun.sh  run.sh  sam2al.py  sam3al.py  samal.py  seg.py  (+10 more)
PreAnnotation/: COCO_labels.xlsx  COCO_outdoor_superlabels.xlsx  Detection.ipynb  Dockerfile  SAM3.ipynb  Segmentation.ipynb  der.sh  drs.sh  labels.tsv  open.sh  openroot.sh  restart.sh  run.sh  stop.sh  superlabels.tsv  voila.sh
docker/: Dockerfile  cmd.sh  open.sh  openroot.sh  restart.sh  run.sh  stop.sh
dockerPreAnnotation/: Detection.ipynb  Dockerfile  PreAnnotation.ipynb  der.sh  maksim_Dockerfile  maksim_run.sh  run.sh  stop.sh
dockerPreAnnotation/project/: .gitignore
docs/: _optflow.md  _prompt.txt  _prompt2README.txt  alb_utils.md  boxmot_utils.md  classes.md  copybal.md  cv_utils.md  cvat.md  cvat_srv.md  dinoal.md  gdinoal.md  ipy_utils.md  keras_utils.md  labels.md  labels_template.xlsx.md  ml_utils.md  ollm-utils.md  ollm_utils.md  onnx_utils.md  pt_utils.md  sam2al.md  sam3al.md  samal.md  seg.md  superlabels_template.xlsx.md  tf_utils.md  tfmot_utils.md  tresh.md  ul_utils.md  utils.md  video_utils.md  yolo.md
documentation/: utils.md
lint/: lint.sh
tests/: __init__.py  test_boxmot_utils.py  test_copybal.py  test_labels.py  test_ollm_utils.py  test_pt_utils.py  test_sam3al.py  test_ul_utils.py  test_yolo.py
