[project]
name = 'dl_utils'
version = "0.1.0"

[tool.ruff]
# Базовые настройки Ruff
line-length = 80
target-version = "py311"

[tool.ruff.lint]
# Включаем основные категории правил Ruff
select = ["ALL"]

# Исключаем только конкретные правила, которые не хотим
ignore = [
    # Конфликтующие правила pydocstyle
    "D203",  # conflicts with D211
    "D213",  # conflicts with D212

    # Длина строки (управляется форматером)
    # "E501",

    # Специфичные правила, которые хотим отключить
    # "S101",  # Использование assert
    # "PLR0913", # Слишком много аргументов в функции
    "RUF001", "RUF002", "RUF003", # Кириллица в комментариях и строках

    # Другие потенциально строгие правила
    # "PLR0915", # Too many statements
    # "PLR0912", # Too many branches
    # "PLR0911", # Too many return statements
]

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401']  # неиспользуемый импорт в __init__
'tests/**' = ['S101', 'PLR2004']  # разрешаем assert и magic values в тестах

[tool.ruff.format]
# Настройки форматера
quote-style = "single"