[project]
name = 'dl_utils'
version = "0.1.0"

# Базовые настройки Ruff:
[tool.ruff]
line-length = 80
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]  # Включаем все категории правил Ruff

# Исключаем только конкретные правила, которые не хотим:
ignore = [
    # Конфликтующие правила pydocstyle:
    "D203",  # Конфликтует с D211
    "D213",  # Конфликтует с D212

    # Конфликты с форматером:
    "COM812",  # Trailing comma
    "Q000",    # Несовместимость кавычек
    "Q003",    # Несовместимость кавычек

    # Кириллица в комментариях и строках:
    "RUF001", "RUF002", "RUF003",

    # Игнорируем предупреждения о неизвестных noqa-кодах (например, для WPS):
    "RUF100",
    # Нужно для поочерёдного использования Ruff и WPS в одном проекте.
]

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401']  # неиспользуемый импорт в __init__
'tests/**' = ['S101', 'PLR2004']  # разрешаем assert и magic values в тестах

# Настройки форматера:
[tool.ruff.format]
quote-style = "single"



# Интеграция WPS во flake8:
[tool.flake8]
select = "WPS"  # Используем только правила WPS
ignore = "ALL"  # Игнорируем все остальные правила
max-line-length = 80
format = "wemake"  # Формат вывода (опционально)
show-source = true  # Показываем коды ошибок
statistics = true