[project]
name = 'dl_utils'
version = "0.1.2"


######################
#        Ruff        #
######################

# Базовые настройки Ruff:
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]  # Включаем все категории правил Ruff

# Исключения из правил:
ignore = [
    # Конфликтующие правила pydocstyle:
    "D203",  # Конфликтует с D211
    "D213",  # Конфликтует с D212

    # Конфликты с форматером:
    # "COM812",  # Trailing comma
    "Q000",    # Несовместимость кавычек
    "Q003",    # Несовместимость кавычек

    # Кириллица в комментариях и строках:
    "RUF001", "RUF002", "RUF003",

    # Игнорируем предупреждения о неизвестных noqa-кодах (например, для WPS):
    "RUF100",
    # Нужно для поочерёдного использования Ruff и WPS в одном проекте.
]

[tool.ruff.lint.per-file-ignores]
'__init__.py' = ['F401']  # неиспользуемый импорт в __init__
'tests/**' = ['S101', 'PLR2004']  # разрешаем assert и magic values в тестах

# Настройки форматера:
[tool.ruff.format]
quote-style = "single"


######################
#    WPS & Flake8    #
######################

# Интеграция WPS во flake8:
[tool.flake8]
max-line-length = 88
select = "WPS"      # Используем только правила WPS
ignore = "ALL"      # Игнорируем все остальные правила
format = "wemake"   # Формат вывода (опционально)
show-source = true  # Показываем коды ошибок
statistics = true


######################
#       Pytest       #
######################

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--strict-markers", "--strict-config"]
pythonpath = ["."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests"
]
filterwarnings = ["error"]